--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2D Kit Builder</title>
+    <title>Athleon Kit Builder</title>
     <link rel="icon" href="/favicon.ico">
 </head>
 <body>
